--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "@jamshop/eleventy-filter-dump",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
+  "repository": "jamshop/eleventy-filter-dump",
   "license": "MIT",
+  "scripts": {
+    "test": "ava --verbose"
+  },
   "dependencies": {
     "ansi-html": "0.0.7"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^0.11.1",
+    "ava": "^3.12.1"
+  },
+  "ava": {
+    "files": [
+      "**/*.test.js"
+    ]
   }
 }
