--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ava --verbose"
   },
   "dependencies": {
-    "ansi-html": "0.0.7"
+    "ansi-html": "^0.0.9"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
